[tool.poetry]
name = "reality-agents"
version = "0.1.0"
description = ""
authors = ["nworb999 <emma.nworb@gmail.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
colorama = "^0.4.6"
sshtunnel = "^0.4.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
